--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
+
+    <style>
+        body {
+            background-color: #e4e4e4;
+        }
+    </style>
 </head>
 
 <body>
@@ -74,60 +80,55 @@
 
     <!--Main Section-->
     <main id="main">
+        <!--Cards-->
         <div class="container">
-            <div class="row col-md-12">
-                <div class="col-md-12">
-                    <div class="card display-card col-md-3">
-                        <img src="./solutions/1. Stats-Preview-Card/design/desktop-design.jpg" alt="">
-                    </div>
-                    <div class="card display-card col-md-3">
-                        <img src="./solutions/2. Order-Summary/design/desktop-design.jpg" alt="">
-                    </div>
-                    <div class="card display-card col-md-3"></div>
+            <div class="row">
+                <div class="card display-card col-md-5">
+                    <img src="./solutions/1. Stats-Preview-Card/design/desktop-design.jpg" alt="">
+                    <h2>Stats Preview Card Component Main</h2>
+                    <a href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62">View
+                        Challenge</a>
+                    <a
+                        href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/1.%20Stats-Preview-Card">View
+                        Solution</a>
+                    <a href="./solutions/1. Stats-Preview-Card/index.html">View Live Demo</a>
                 </div>
+                <div class="col-md-2"></div>
+                <div class="card display-card col-md-5">
+                    <img src="./solutions/2. Order-Summary/design/desktop-design.jpg" alt="">
+                    <h2>Order Summary Component Main</h2>
+                    <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj">View
+                        Challenge</a>
+                    <a
+                        href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/2.%20Order-Summary">View
+                        Solution</a>
+                    <a href="./solutions/2. Order-Summary/index.html">View Live Demo</a>
+                </div>
+                <div class="card display-card col-md-5"></div>
+                <div class="col-md-2"></div>
+                <div class="card display-card col-md-5"></div>
+                <div class="card display-card col-md-5"></div>
+                <div class="col-md-2"></div>
+                <div class="card display-card col-md-5"></div>
+                <div class="card display-card col-md-5"></div>
+                <div class="col-md-2"></div>
+                <div class="card display-card col-md-5"></div>
+                <div class="card display-card col-md-5"></div>
+                <div class="col-md-2"></div>
+                <div class="card display-card col-md-5"></div>
             </div>
         </div>
     </main>
     <!--End of Main Section-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <footer id="footer"></footer>
+    <!--Footer Section-->
+    <footer id="footer">
+        <div id="credit">
+            <h4>Solutions for <a href="https://frontendmentor.io/">Frontend Mentor</a> Challenges - Designed and
+                Developed by <a href="https://geekblower.github.io/">Geekblower</a></h4>
+        </div>
+    </footer>
+    <!--End of Footer Section-->
 
     <!--Local JS Files-->
     <script src="assets/js/script.js"></script>
