--- a/index.html
+++ b/index.html
@@ -84,30 +84,55 @@
         <div class="container">
             <div class="row">
                 <div class="card display-card col-md-5">
-                    <img src="./solutions/1. Stats-Preview-Card/design/desktop-design.jpg" alt="">
+                    <img src="./solutions/newbie/01. Stats-Preview-Card/design/desktop-design.jpg" alt="">
                     <h2>Stats Preview Card Component Main</h2>
-                    <a href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62">View
+                    <a href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62"
+                        target="_blank">View
                         Challenge</a>
-                    <a
-                        href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/1.%20Stats-Preview-Card">View
+                    <a href="#" target="_blank">View
                         Solution</a>
-                    <a href="./solutions/1. Stats-Preview-Card/index.html">View Live Demo</a>
+                    <a href="./solutions/newbie/01. Stats-Preview-Card/index.html">View Live Demo</a>
                 </div>
                 <div class="col-md-2"></div>
                 <div class="card display-card col-md-5">
-                    <img src="./solutions/2. Order-Summary/design/desktop-design.jpg" alt="">
+                    <img src="./solutions/newbie/02. Order-Summary/design/desktop-design.jpg" alt="">
                     <h2>Order Summary Component Main</h2>
-                    <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj">View
+                    <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj"
+                        target="_blank">View
                         Challenge</a>
-                    <a
-                        href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/2.%20Order-Summary">View
+                    <a href="#" target="_blank">View
                         Solution</a>
-                    <a href="./solutions/2. Order-Summary/index.html">View Live Demo</a>
+                    <a href="./solutions/newbie/02. Order-Summary/index.html">View Live Demo</a>
                 </div>
-                <div class="card display-card col-md-5"></div>
+                <div class="card display-card col-md-5">
+                    <img src="./solutions/newbie/03. 3-Column Preview Card/design/desktop-design.jpg" alt="">
+                    <h2>3-Column Preview Card</h2>
+                    <a href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-"
+                        target="_blank">View
+                        Challenge</a>
+                    <a href="#" target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/03. 3-Column Preview Card/index.html">View Live Demo</a>
+                </div>
                 <div class="col-md-2"></div>
-                <div class="card display-card col-md-5"></div>
-                <div class="card display-card col-md-5"></div>
+                <div class="card display-card col-md-5">
+                    <img src="./solutions/newbie/04. Profile Card/design/desktop-design.jpg" alt="">
+                    <h2>Profile card</h2>
+                    <a href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ" target="_blank">View
+                        Challenge</a>
+                    <a href="#" target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/04. Profile Card/index.html">View Live Demo</a>
+                </div>
+                <div class="card display-card col-md-5">
+                    <img src="./solutions/newbie/05. FAQ Accordion/design/desktop-design.jpg" alt="">
+                    <h2>FAQ Accordian</h2>
+                    <a href="#" target="_blank">View
+                        Challenge</a>
+                    <a href="#" target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/05. FAQ Accordion/index.html">View Live Demo</a>
+                </div>
                 <div class="col-md-2"></div>
                 <div class="card display-card col-md-5"></div>
                 <div class="card display-card col-md-5"></div>
