--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                     <a href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62"
                         target="_blank">View
                         Challenge</a>
-                    <a href="#" target="_blank">View
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/01.%20Stats-Preview-Card"
+                        target="_blank">View
                         Solution</a>
                     <a href="./solutions/newbie/01. Stats-Preview-Card/index.html">View Live Demo</a>
                 </div>
@@ -100,7 +101,8 @@
                     <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj"
                         target="_blank">View
                         Challenge</a>
-                    <a href="#" target="_blank">View
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/02.%20Order-Summary"
+                        target="_blank">View
                         Solution</a>
                     <a href="./solutions/newbie/02. Order-Summary/index.html">View Live Demo</a>
                 </div>
@@ -110,7 +112,8 @@
                     <a href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-"
                         target="_blank">View
                         Challenge</a>
-                    <a href="#" target="_blank">View
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/03.%203-Column%20Preview%20Card"
+                        target="_blank">View
                         Solution</a>
                     <a href="./solutions/newbie/03. 3-Column Preview Card/index.html">View Live Demo</a>
                 </div>
@@ -118,9 +121,11 @@
                 <div class="card display-card col-md-5">
                     <img src="./solutions/newbie/04. Profile Card/design/desktop-design.jpg" alt="">
                     <h2>Profile card</h2>
-                    <a href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ" target="_blank">View
+                    <a href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ"
+                        target="_blank">View
                         Challenge</a>
-                    <a href="#" target="_blank">View
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/04.%20Profile%20Card"
+                        target="_blank">View
                         Solution</a>
                     <a href="./solutions/newbie/04. Profile Card/index.html">View Live Demo</a>
                 </div>
