--- a/index.html
+++ b/index.html
@@ -132,14 +132,25 @@
                 <div class="card display-card col-md-5">
                     <img src="./solutions/newbie/05. FAQ Accordion/design/desktop-design.jpg" alt="">
                     <h2>FAQ Accordian</h2>
-                    <a href="#" target="_blank">View
+                    <a href="https://www.frontendmentor.io/challenges/faq-accordion-card-XlyjD0Oam" target="_blank">View
                         Challenge</a>
-                    <a href="#" target="_blank">View
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/05.%20FAQ%20Accordian"
+                        target="_blank">View
                         Solution</a>
                     <a href="./solutions/newbie/05. FAQ Accordion/index.html">View Live Demo</a>
                 </div>
                 <div class="col-md-2"></div>
-                <div class="card display-card col-md-5"></div>
+                <div class="card display-card col-md-5">
+                    <img src="./solutions/newbie/06. Social Proof Section/design/desktop-design.jpg" alt="">
+                    <h2>Social Proof Section</h2>
+                    <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA"
+                        target="_blank">View
+                        Challenge</a>
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/06.%20Social%20Proof%20Section"
+                        target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/06. Social Proof Section/index.html">View Live Demo</a>
+                </div>
                 <div class="card display-card col-md-5"></div>
                 <div class="col-md-2"></div>
                 <div class="card display-card col-md-5"></div>
