--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                 </div>
                 <div class="card display-card col-md-5">
                     <img src="./solutions/newbie/05. FAQ Accordion/design/desktop-design.jpg" alt="">
-                    <h2>FAQ Accordian</h2>
+                    <h2>FAQ Accordion</h2>
                     <a href="https://www.frontendmentor.io/challenges/faq-accordion-card-XlyjD0Oam" target="_blank">View
                         Challenge</a>
-                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/05.%20FAQ%20Accordian"
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/05.%20FAQ%20Accordion"
                         target="_blank">View
                         Solution</a>
                     <a href="./solutions/newbie/05. FAQ Accordion/index.html">View Live Demo</a>
