--- a/index.html
+++ b/index.html
@@ -151,9 +151,29 @@
                         Solution</a>
                     <a href="./solutions/newbie/06. Social Proof Section/index.html">View Live Demo</a>
                 </div>
-                <div class="card display-card col-md-5"></div>
+                <div class="card display-card col-md-5">
+                    <img src="./solutions/newbie/07. Article Preview/design/desktop-design.jpg" alt="">
+                    <h2>Article Preview</h2>
+                    <a href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT"
+                        target="_blank">View
+                        Challenge</a>
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/07.%20Article%20Preview"
+                        target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/06. Article Preview/index.html">View Live Demo</a>
+                </div>
                 <div class="col-md-2"></div>
-                <div class="card display-card col-md-5"></div>
+                <div class="card display-card col-md-5">
+                    <img src="./solutions/newbie/08. Four Card Feature Section/design/desktop-design.jpg" alt="">
+                    <h2>Four Card Feature Section</h2>
+                    <a href="https://www.frontendmentor.io/challenges/four-card-feature-section-weK1eFYK"
+                        target="_blank">View
+                        Challenge</a>
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/08.%20Four%20Card%20Feature%20Section"
+                        target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/08. Four Card Feature Section/index.html">View Live Demo</a>
+                </div>
                 <div class="card display-card col-md-5"></div>
                 <div class="col-md-2"></div>
                 <div class="card display-card col-md-5"></div>
