--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
         <!--Cards-->
         <div class="container">
             <div class="row">
-                <div class="card display-card col-md-5">
+
+                <div class="card display-card col-md-3">
                     <img src="./solutions/newbie/01. Stats-Preview-Card/design/desktop-design.jpg" alt="">
-                    <h2>Stats Preview Card Component Main</h2>
+                    <h2>Stats Preview Card</h2>
                     <a href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62"
                         target="_blank">View
                         Challenge</a>
@@ -94,10 +95,10 @@
                         Solution</a>
                     <a href="./solutions/newbie/01. Stats-Preview-Card/index.html">View Live Demo</a>
                 </div>
-                <div class="col-md-2"></div>
-                <div class="card display-card col-md-5">
+
+                <div class="card display-card col-md-3">
                     <img src="./solutions/newbie/02. Order-Summary/design/desktop-design.jpg" alt="">
-                    <h2>Order Summary Component Main</h2>
+                    <h2>Order Summary</h2>
                     <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj"
                         target="_blank">View
                         Challenge</a>
@@ -106,9 +107,10 @@
                         Solution</a>
                     <a href="./solutions/newbie/02. Order-Summary/index.html">View Live Demo</a>
                 </div>
-                <div class="card display-card col-md-5">
+
+                <div class="card display-card col-md-3">
                     <img src="./solutions/newbie/03. 3-Column Preview Card/design/desktop-design.jpg" alt="">
-                    <h2>3-Column Preview Card</h2>
+                    <h2>3-Column Card</h2>
                     <a href="https://www.frontendmentor.io/challenges/3column-preview-card-component-pH92eAR2-"
                         target="_blank">View
                         Challenge</a>
@@ -117,8 +119,8 @@
                         Solution</a>
                     <a href="./solutions/newbie/03. 3-Column Preview Card/index.html">View Live Demo</a>
                 </div>
-                <div class="col-md-2"></div>
-                <div class="card display-card col-md-5">
+
+                <div class="card display-card col-md-3">
                     <img src="./solutions/newbie/04. Profile Card/design/desktop-design.jpg" alt="">
                     <h2>Profile card</h2>
                     <a href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ"
@@ -129,7 +131,8 @@
                         Solution</a>
                     <a href="./solutions/newbie/04. Profile Card/index.html">View Live Demo</a>
                 </div>
-                <div class="card display-card col-md-5">
+
+                <div class="card display-card col-md-3">
                     <img src="./solutions/newbie/05. FAQ Accordion/design/desktop-design.jpg" alt="">
                     <h2>FAQ Accordion</h2>
                     <a href="https://www.frontendmentor.io/challenges/faq-accordion-card-XlyjD0Oam" target="_blank">View
@@ -139,8 +142,8 @@
                         Solution</a>
                     <a href="./solutions/newbie/05. FAQ Accordion/index.html">View Live Demo</a>
                 </div>
-                <div class="col-md-2"></div>
-                <div class="card display-card col-md-5">
+
+                <div class="card display-card col-md-3">
                     <img src="./solutions/newbie/06. Social Proof Section/design/desktop-design.jpg" alt="">
                     <h2>Social Proof Section</h2>
                     <a href="https://www.frontendmentor.io/challenges/social-proof-section-6e0qTv_bA"
@@ -151,7 +154,8 @@
                         Solution</a>
                     <a href="./solutions/newbie/06. Social Proof Section/index.html">View Live Demo</a>
                 </div>
-                <div class="card display-card col-md-5">
+
+                <div class="card display-card col-md-3">
                     <img src="./solutions/newbie/07. Article Preview/design/desktop-design.jpg" alt="">
                     <h2>Article Preview</h2>
                     <a href="https://www.frontendmentor.io/challenges/article-preview-component-dYBN_pYFT"
@@ -162,10 +166,10 @@
                         Solution</a>
                     <a href="./solutions/newbie/07. Article Preview/index.html">View Live Demo</a>
                 </div>
-                <div class="col-md-2"></div>
-                <div class="card display-card col-md-5">
+
+                <div class="card display-card col-md-3">
                     <img src="./solutions/newbie/08. Four Card Feature Section/design/desktop-design.jpg" alt="">
-                    <h2>Four Card Feature Section</h2>
+                    <h2>Four Card Section</h2>
                     <a href="https://www.frontendmentor.io/challenges/four-card-feature-section-weK1eFYK"
                         target="_blank">View
                         Challenge</a>
@@ -174,9 +178,55 @@
                         Solution</a>
                     <a href="./solutions/newbie/08. Four Card Feature Section/index.html">View Live Demo</a>
                 </div>
-                <div class="card display-card col-md-5"></div>
-                <div class="col-md-2"></div>
-                <div class="card display-card col-md-5"></div>
+
+                <div class="card display-card col-md-3">
+                    <img src="./solutions/newbie/09. Base Apparel/design/desktop-design.jpg" alt="">
+                    <h2>Base Apparel</h2>
+                    <a href="https://www.frontendmentor.io/challenges/base-apparel-coming-soon-page-5d46b47f8db8a7063f9331a0"
+                        target="_blank">View
+                        Challenge</a>
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/09.%20Base%20Apparel"
+                        target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/09. Base Apparel/index.html">View Live Demo</a>
+                </div>
+
+                <div class="card display-card col-md-3">
+                    <img src="./solutions/newbie/10. Intro Component With Signup Form/design/desktop-design.jpg" alt="">
+                    <h2>Signup Form</h2>
+                    <a href="https://www.frontendmentor.io/challenges/intro-component-with-signup-form-5cf91bd49edda32581d28fd1"
+                        target="_blank">View
+                        Challenge</a>
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/10.%20Intro%20Component%20With%20Signup%20Form"
+                        target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/10. Intro Component With Signup Form/index.html">View Live Demo</a>
+                </div>
+
+                <div class="card display-card col-md-3">
+                    <img src="./solutions/newbie/10. Intro Component With Signup Form/design/desktop-design.jpg" alt="">
+                    <h2>Signup Form</h2>
+                    <a href="https://www.frontendmentor.io/challenges/intro-component-with-signup-form-5cf91bd49edda32581d28fd1"
+                        target="_blank">View
+                        Challenge</a>
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/10.%20Intro%20Component%20With%20Signup%20Form"
+                        target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/10. Intro Component With Signup Form/index.html">View Live Demo</a>
+                </div>
+
+                <div class="card display-card col-md-3">
+                    <img src="./solutions/newbie/10. Intro Component With Signup Form/design/desktop-design.jpg" alt="">
+                    <h2>Signup Form</h2>
+                    <a href="https://www.frontendmentor.io/challenges/intro-component-with-signup-form-5cf91bd49edda32581d28fd1"
+                        target="_blank">View
+                        Challenge</a>
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/10.%20Intro%20Component%20With%20Signup%20Form"
+                        target="_blank">View
+                        Solution</a>
+                    <a href="./solutions/newbie/10. Intro Component With Signup Form/index.html">View Live Demo</a>
+                </div>
+
             </div>
         </div>
     </main>
