--- a/index.html
+++ b/index.html
@@ -204,27 +204,29 @@
                 </div>
 
                 <div class="card display-card col-md-3">
-                    <img src="./solutions/newbie/10. Intro Component With Signup Form/design/desktop-design.jpg" alt="">
-                    <h2>Signup Form</h2>
-                    <a href="https://www.frontendmentor.io/challenges/intro-component-with-signup-form-5cf91bd49edda32581d28fd1"
+                    <img src="./solutions/newbie/11. Single Price Grid Component/design/desktop-design.jpg" alt="">
+                    <h2>Single Price Grid</h2>
+                    <a href="https://www.frontendmentor.io/challenges/single-price-grid-component-5ce41129d0ff452fec5abbbc"
                         target="_blank">View
                         Challenge</a>
-                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/10.%20Intro%20Component%20With%20Signup%20Form"
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/11.%20Single%20Price%20Grid%20Component"
                         target="_blank">View
                         Solution</a>
-                    <a href="./solutions/newbie/10. Intro Component With Signup Form/index.html">View Live Demo</a>
+                    <a href="./solutions/newbie/11. Single Price Grid Component/index.html">View Live Demo</a>
                 </div>
 
                 <div class="card display-card col-md-3">
-                    <img src="./solutions/newbie/10. Intro Component With Signup Form/design/desktop-design.jpg" alt="">
-                    <h2>Signup Form</h2>
-                    <a href="https://www.frontendmentor.io/challenges/intro-component-with-signup-form-5cf91bd49edda32581d28fd1"
+                    <img src="./solutions/newbie/12. Huddle Landing Page With Single Introductory Section/design/desktop-design.jpg"
+                        alt="">
+                    <h2>Landing Page</h2>
+                    <a href="https://www.frontendmentor.io/challenges/huddle-landing-page-with-a-single-introductory-section-B_2Wvxgi0"
                         target="_blank">View
                         Challenge</a>
-                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/10.%20Intro%20Component%20With%20Signup%20Form"
+                    <a href="https://github.com/geekblower/frontend-mentor-solutions/tree/main/solutions/newbie/12.%20Huddle%20Landing%20Page%20With%20Single%20Introductory%20Section"
                         target="_blank">View
                         Solution</a>
-                    <a href="./solutions/newbie/10. Intro Component With Signup Form/index.html">View Live Demo</a>
+                    <a href="./solutions/newbie/12. Huddle Landing Page With Single Introductory Section/index.html">View
+                        Live Demo</a>
                 </div>
 
             </div>
