--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
-    <!--Favicon-->
+    <!------Favicon------>
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
-    <!--Local CSS Files-->
+    <!------Local CSS Files------>
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <!--CSS CDNs-->
+    <!------CSS CDNs------>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
@@ -30,7 +30,7 @@
 
     <!--Header Section-->
     <header id="header">
-        <!--Navbar-->
+        <!------Navbar------>
         <nav class="navbar navbar-expand-lg" id="navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#" id="logo">GeekBlower</a>
@@ -55,7 +55,7 @@
                                 title="Facebook"><i class="bx bxl-facebook-circle"></i></a></li>
                     </ul>
                 </div>
-                <!--List for small screen-->
+                <!------List for small screen------>
                 <div class="collapse navbar-collapsed" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page"
@@ -74,13 +74,13 @@
                 </div>
             </div>
         </nav>
-        <!--End of navbar-->
+        <!------End of navbar------>
     </header>
     <!--End of Header Section-->
 
-    <!--Main Section-->
+    <!------Main Section------>
     <main id="main">
-        <!--Cards-->
+        <!------Cards------>
         <div class="container">
             <div class="row">
 
@@ -232,20 +232,20 @@
             </div>
         </div>
     </main>
-    <!--End of Main Section-->
+    <!------End of Main Section------>
 
-    <!--Footer Section-->
+    <!------Footer Section------>
     <footer id="footer">
         <div id="credit">
             <h4>Solutions for <a href="https://frontendmentor.io/">Frontend Mentor</a> Challenges - Designed and
                 Developed by <a href="https://geekblower.github.io/">Geekblower</a></h4>
         </div>
     </footer>
-    <!--End of Footer Section-->
+    <!------End of Footer Section------>
 
-    <!--Local JS Files-->
+    <!------Local JS Files------>
     <script src="assets/js/script.js"></script>
-    <!--JS CDNs-->
+    <!------JS CDNs------>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
